// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should be disabled 1`] = `
<label class="Toggle"><input type="checkbox" disabled="disabled" class="Toggle__input sr-only">
  <div aria-hidden="true" class="Toggle__handle inline-flex rounded-full relative h-2 w-10 cursor-pointer bg-gray-300"><span class="Toggle__handle__inner h-5 w-5 bg-gray-300 rounded-full absolute transform -translate-y-1/2 mt-1 transition transition-colors transition-transform ease-in-out duration-200"></span></div>
</label>
`;

exports[`Toggle should render 1`] = `
<label class="Toggle"><input type="checkbox" class="Toggle__input sr-only">
  <div aria-hidden="true" class="Toggle__handle inline-flex rounded-full relative h-2 w-10 cursor-pointer bg-gray-300"><span class="Toggle__handle__inner h-5 w-5 bg-gray-300 rounded-full absolute transform -translate-y-1/2 mt-1 transition transition-colors transition-transform ease-in-out duration-200"></span></div>
</label>
`;

exports[`Toggle should toggle by prop 1`] = `
<label class="Toggle"><input type="checkbox" class="Toggle__input sr-only">
  <div aria-hidden="true" class="Toggle__handle inline-flex rounded-full relative h-2 w-10 cursor-pointer bg-gray-300"><span class="Toggle__handle__inner h-5 w-5 bg-gray-300 rounded-full absolute transform -translate-y-1/2 mt-1 transition transition-colors transition-transform ease-in-out duration-200"></span></div>
</label>
`;

exports[`Toggle should toggle on click 1`] = `
<label class="Toggle"><input type="checkbox" class="Toggle__input sr-only">
  <div aria-hidden="true" class="Toggle__handle inline-flex rounded-full relative h-2 w-10 cursor-pointer bg-gray-300"><span class="Toggle__handle__inner h-5 w-5 bg-gray-300 rounded-full absolute transform -translate-y-1/2 mt-1 transition transition-colors transition-transform ease-in-out duration-200"></span></div>
</label>
`;
